--- a/tambola/public/index.html
+++ b/tambola/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
 
     <title>Tambola</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
 
+
+    </div>
   </body>
 </html>
